# ct-iot-things-report-job-service

./: .env  .env.example  .env.test  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest-cov.ini
.github/workflows/: tests.yml
None/80ece0d4-6375-4bb8-b027-3e40b839e0a9/report_name_0-1262304000-1293840000/: report_name_0-0.csv
docs/: DIAGRAMS.md
src/: config.py  crud.py  models.py  schemas.py  types.py
src/things_report_job_service/: __main__.py  service.py
src/util/: db_util.py  s3_util.py  service_util.py
tests/: config.py  conftest.py
tests/helper/: archive_job_helper.py  data_helper.py  db_helper.py  helper.py  job_helper.py  thing_payloads_helper.py
tests/integration/: job_consumer_test.py
tests/unit/: exception_test.py  util_test.py
